--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,8 @@
 
     <string name="message_logout_option">Apakah Anda ingin [keluar] dari aplikasi ?</string>
 
+    <string name="message_success_update">Berhasil merubah %s</string>
+
     <string name="message_no_title_network">Tidak Ada Koneksi Internet</string>
     <string name="message_no_network">Sepertinya Perangkat Anda mengalami kendala dalam Jaringan Internet</string>
     <string name="message_error_title_general">Mohon Maaf, terjadi kesalahan</string>
