--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,15 @@
     <string name="label_name">Nama</string>
     <string name="label_username">Email</string>
     <string name="label_password">Kata Sandi</string>
+    <string name="label_existing_password">Kata Sandi saat ini</string>
+    <string name="label_new_password">Kata Sandi Baru</string>
+    <string name="label_confirm_new_password">Konfirmasi Kata Sandi Baru</string>
 
     <string name="label_welcome_greeting_main">Selamat Datang</string>
+    <string name="label_get_image_from">Ambil Gambar melalui</string>
+
+    <string name="label_show_password">Tampilkan Password</string>
+    <string name="label_hide_password">Sembunyikan Password</string>
 
     <string name="label_count_data">%s</string>
     <string name="label_count_today">Data input per hari ini</string>
@@ -54,6 +61,8 @@
     <string name="setting_debug_mode_menu">Mode Debug</string>
     <string name="setting_profile_menu">Profil</string>
     <string name="setting_exit_apps_menu">Keluar Aplikasi</string>
+    <string name="setting_camera_menu">Kamera</string>
+    <string name="setting_gallery_menu">Galeri</string>
 
     <string name="notification_error_title">Kesalahan</string>
     <string name="notification_warning_title">Peringatan</string>
@@ -77,4 +86,5 @@
     <string name="message_error_empty">%s harus diisi, [Tidak Boleh kosong]</string>
     <string name="message_error_empty_non_spannable">%s harus diisi, Tidak Boleh kosong</string>
     <string name="message_error_not_valid">%s yang Anda masukkan [Tidak Valid]</string>
+    <string name="message_error_validate_not_valid">%s dan %s yang Anda masukkan [Tidak Valid]</string>
 </resources>
