Add Crop Photo, and Connect API Updated Photo Profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="cancel">Batalkan</string>
     <string name="ok">OK</string>
     <string name="change">Ubah</string>
+    <string name="done">Selesai</string>
+    <string name="temp">Temp</string>
 
     <string name="label_login">Masuk</string>
     <string name="label_name">Nama</string>
@@ -87,4 +89,5 @@
     <string name="message_error_empty_non_spannable">%s harus diisi, Tidak Boleh kosong</string>
     <string name="message_error_not_valid">%s yang Anda masukkan [Tidak Valid]</string>
     <string name="message_error_validate_not_valid">%s dan %s yang Anda masukkan [Tidak Valid]</string>
+    <string name="message_error_permission_change_image_profile">Anda harus mengizinkan Aplikasi untuk mengakses Kamera dan Galeri Anda untuk bisa mengubah Foto Profil</string>
 </resources>
