Connect to API Reset Password, Connect to API Activate, Connect to API Delete inner Profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="label_add">Tambah %s</string>
     <string name="label_add_on">Tambahkan %s</string>
     <string name="label_enter_of">Masukkan %s %s</string>
+    <string name="label_edit">Ubah %s</string>
 
     <string name="label_plus_two_string">%s %s</string>
     <string name="label_plus_two_string_enter">%s\n%s</string>
